8013398: Adjust number of stack guard pages on systems with large memory page size

Auto adjust number of stack guard pages on systems with large memory page size

Reviewed-by: bobv, coleenp